--- a/cmd/narratorfiles/webui/templates/layout.html
+++ b/cmd/narratorfiles/webui/templates/layout.html
@@ -1,13 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>narrator files</title>
+    <title>👾 narrator files</title>
+    <style>
+        body {
+            font-size: 18px;
+            background-color: #272822;
+            color: #f8f8f2;
+        }
+        .table {
+            width: 50%;
+            margin: auto;
+            border-collapse: collapse;
+        }
+        .table tr:nth-child(even) {
+            background-color: #383830; 
+        }
+        .table tr:nth-child(odd) {
+            background-color: #49483e;
+        }
+        .table td {
+            border: #75715e solid 1px;
+            padding: 10px;
+        }
+        .content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: calc(100vh - 3rem);
+        }
+        h1 {
+            text-align: center;
+            color: #f92672;
+            width: 100%;
+        }
+        a {
+            color: #66d9ef;
+            text-decoration: none;
+        }
+        a:hover {
+            color: #a6e22e;
+        }
+    </style>
 </head>
 <body>
-	<ul>
-		{{range .}}
-			<li>{{.Key}}</li>
-		{{end}}
-	</ul>
+    <div class="container">
+        <h1 class="title is-1">👾 narrator files</h1>
+        <div class="content">
+            <table class="table">
+                <tbody>
+                    {{range .}}
+                    <tr>
+                        <td>
+                            <a href="{{.Key}}" target="_blank">{{.Key}}</a>
+                        </td>
+                    </tr>
+                    {{end}}
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
