--- a/cmd/narratorfiles/webui/templates/layout.html
+++ b/cmd/narratorfiles/webui/templates/layout.html
@@ -9,7 +9,7 @@
             color: #f8f8f2;
         }
         .table {
-            width: 50%;
+            width: 66%;
             margin: auto;
             border-collapse: collapse;
         }
@@ -52,7 +52,7 @@
                     {{range .}}
                     <tr>
                         <td>
-                            <a href="{{.Key}}" target="_blank">{{.Key}}</a>
+                            <a href="/object/{{.Key}}" target="_blank">{{.Key}}</a>
                         </td>
                     </tr>
                     {{end}}
