--- a/cmd/narratorfiles/webui/templates/playaudio.html
+++ b/cmd/narratorfiles/webui/templates/playaudio.html
@@ -7,47 +7,47 @@
             font-size: 18px;
             background-color: #272822;
             color: #f8f8f2;
-        }
-        .table {
-            width: 66%;
-            margin: auto;
-            border-collapse: collapse;
-        }
-        .table tr:nth-child(even) {
-            background-color: #383830; 
-        }
-        .table tr:nth-child(odd) {
-            background-color: #49483e;
-        }
-        .table td {
-            border: #75715e solid 1px;
-            padding: 10px;
+            padding: 20px;
         }
         .content {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            min-height: calc(100vh - 3rem);
+            justify-content: start;
         }
         h1 {
             text-align: center;
             color: #f92672;
-            width: 100%;
+            margin-bottom: 2rem;
+        }
+        p {
+            text-align: center;
+            color: #66d9ef;
         }
         a {
             color: #66d9ef;
             text-decoration: none;
+            margin-left: 0.5rem;
         }
         a:hover {
             color: #a6e22e;
+        }
+        .file-info {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 1rem;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1 class="title is-1">👾 narrator files: playing 🔊</h1>
+        <h1 class="title is-1">👾 narrator files: playing</h1>
         <div class="content">
-            <p class="file-name">Now playing: {{.Key}}</p>
+            <div class="file-info">
+                <p class="file-name">🔊 {{.Key}}</p>
+                <a href="{{.URL}}" download>💾</a>
+            </div>
             <audio controls>
                 <source src="{{.URL}}" type="{{.Mime}}">
                 Your browser does not support the audio tag.
