--- a/cmd/narratorfiles/webui/templates/layout.html
+++ b/cmd/narratorfiles/webui/templates/layout.html
@@ -12,6 +12,7 @@
             width: 66%;
             margin: auto;
             border-collapse: collapse;
+            margin-top: 20px; /* Add margin-top to adjust vertical position */
         }
         .table tr:nth-child(even) {
             background-color: #383830; 
@@ -24,9 +25,6 @@
             padding: 10px;
         }
         .content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
             min-height: calc(100vh - 3rem);
         }
         h1 {
@@ -54,6 +52,8 @@
                         <td>
                             {{if eq .Type "audio"}}
                                 <a href="/play/{{.Key}}">{{.Key}}</a>
+                            {{else if eq .Type "dir"}}
+                                <a href="/{{.Key}}/">{{.Key}}</a>
                             {{else}}
                                 <a href="/object/{{.Key}}" target="_blank">{{.Key}}</a>
                             {{end}}
