--- a/cmd/narratorfiles/webui/templates/playaudio.html
+++ b/cmd/narratorfiles/webui/templates/playaudio.html
@@ -2,43 +2,8 @@
 <html>
 <head>
     <title>👾 narrator files</title>
-    <style>
-        body {
-            font-size: 18px;
-            background-color: #272822;
-            color: #f8f8f2;
-            padding: 20px;
-        }
-        .content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: start;
-        }
-        h1 {
-            text-align: center;
-            color: #f92672;
-            margin-bottom: 2rem;
-        }
-        p {
-            text-align: center;
-            color: #66d9ef;
-        }
-        a {
-            color: #66d9ef;
-            text-decoration: none;
-            margin-left: 0.5rem;
-        }
-        a:hover {
-            color: #a6e22e;
-        }
-        .file-info {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 1rem;
-        }
-    </style>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/static/styles.css" />
 </head>
 <body>
     <div class="container">
