--- a/cmd/narratorfiles/webui/templates/playaudio.html
+++ b/cmd/narratorfiles/webui/templates/playaudio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>👾 narrator files</title>
+    <title>narrator files</title>
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/static/styles.css" />
 </head>
