--- a/cmd/narratorfiles/webui/templates/playaudio.html
+++ b/cmd/narratorfiles/webui/templates/playaudio.html
@@ -3,7 +3,7 @@
 <head>
     <title>narrator files</title>
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/static/styles.css" />
+    <link rel="stylesheet" href="/static/playaudio.css" />
 </head>
 <body>
     <div class="container">
